Merr fund mappimi,te dhenat inserohen OK